--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 
 <head>
@@ -126,8 +126,36 @@
                         Fitness Here
                       </h1>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam
+                        Welcome to our premier personal training platform.
+                        Take your fitness journey to new heights with our flexible and accessible online training options, allowing you to train anytime, anywhere.
+                      </p>
+                      <!-- <div class="btn-box">
+                        <a href="" class="btn-1">
+                          Read More
+                        </a>
+                        <a href="" class="btn-2">
+                          Get A Quote
+                        </a>
+                      </div> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item ">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-6 col-md-7 offset-md-6 offset-md-5">
+                    <div class="detail-box">
+                      <h2>
+                        Get Your Body
+                      </h2>
+                      <h1>
+                        Fitness Here
+                      </h1>
+                      <p>
+                        Welcome to our premier personal training platform.
+Take your fitness journey to new heights with our flexible and accessible online training options, allowing you to train anytime, anywhere.
                       </p>
                       <div class="btn-box">
                         <a href="" class="btn-1">
@@ -154,36 +182,8 @@
                         Fitness Here
                       </h1>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam
-                      </p>
-                      <div class="btn-box">
-                        <a href="" class="btn-1">
-                          Read More
-                        </a>
-                        <a href="" class="btn-2">
-                          Get A Quote
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item ">
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-6 col-md-7 offset-md-6 offset-md-5">
-                    <div class="detail-box">
-                      <h2>
-                        Get Your Body
-                      </h2>
-                      <h1>
-                        Fitness Here
-                      </h1>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam
+                        Welcome to our premier personal training platform.
+Take your fitness journey to new heights with our flexible and accessible online training options, allowing you to train anytime, anywhere.
                       </p>
                       <div class="btn-box">
                         <a href="" class="btn-1">
@@ -221,8 +221,7 @@
         </div>
         <div class="detail-box">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis
+            Muscle Mastery is the ultimate platform for individuals looking to transform their bodies and get in shape. With its cost-efficient and comprehensive workout programs, Muscle Mastery provides unparalleled guidance and support to help you achieve your fitness goals. By joining Muscle Mastery, you gain access to a team of smart and knowledgeable coaches and trainers who are dedicated to helping you succeed. Whether you're a beginner or an experienced fitness enthusiast, Muscle Mastery offers a range of tailored exercises and expert advice to maximize your results. Experience the power of Muscle Mastery and unlock your full potential for a stronger, healthier, and more confident you.L
           </p>
           <a href="">
             Read More
