--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
                         Welcome to our premier personal training platform.
 Take your fitness journey to new heights with our flexible and accessible online training options, allowing you to train anytime, anywhere.
                       </p>
-                      <div class="btn-box">
+                      <!-- <div class="btn-box">
                         <a href="" class="btn-1">
                           Read More
                         </a>
                         <a href="" class="btn-2">
                           Get A Quote
                         </a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -185,14 +185,14 @@ Take your fitness journey to new heights with our flexible and accessible online
                         Welcome to our premier personal training platform.
 Take your fitness journey to new heights with our flexible and accessible online training options, allowing you to train anytime, anywhere.
                       </p>
-                      <div class="btn-box">
+                      <!-- <div class="btn-box">
                         <a href="" class="btn-1">
                           Read More
                         </a>
                         <a href="" class="btn-2">
                           Get A Quote
                         </a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
