--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Energym</title>
+  <title>Muscle Mastery</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -39,7 +39,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
-              Energym
+              Muscle Mastery
             </span>
           </a>
           <div class="contact_nav" id="">
@@ -212,7 +212,7 @@ Take your fitness journey to new heights with our flexible and accessible online
     <div class="container">
       <div class="heading_container">
         <h2>
-          About Energym
+          About Muscle Mastery
         </h2>
       </div>
       <div class="box">
@@ -583,7 +583,7 @@ Take your fitness journey to new heights with our flexible and accessible online
       <div class="row">
         <div class="col-md-3">
           <h6>
-            About Energym
+            About Muscle Mastery
           </h6>
           <p>
             consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -695,8 +695,7 @@ Take your fitness journey to new heights with our flexible and accessible online
   <!-- footer section -->
   <section class="container-fluid footer_section ">
     <p>
-      &copy; 2019 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2023 Muscle Mastery
     </p>
   </section>
   <!-- footer section -->
