--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                   <div class="col-lg-6 col-md-7 offset-md-6 offset-md-5">
                     <div class="detail-box">
                       <h2>
-                        Get Your Body
+                        Get in shape with us
                       </h2>
-                      <h1>
+                      <!-- <h1>
                         Fitness Here
-                      </h1>
+                      </h1> -->
                       <p>
                         Welcome to our premier personal training platform.
                         Take your fitness journey to new heights with our flexible and accessible online training options, allowing you to train anytime, anywhere.
@@ -148,11 +148,11 @@
                   <div class="col-lg-6 col-md-7 offset-md-6 offset-md-5">
                     <div class="detail-box">
                       <h2>
-                        Get Your Body
+                        Get in shape with us
                       </h2>
-                      <h1>
+                      <!-- <h1>
                         Fitness Here
-                      </h1>
+                      </h1> -->
                       <p>
                         Welcome to our premier personal training platform.
 Take your fitness journey to new heights with our flexible and accessible online training options, allowing you to train anytime, anywhere.
@@ -176,11 +176,11 @@ Take your fitness journey to new heights with our flexible and accessible online
                   <div class="col-lg-6 col-md-7 offset-md-6 offset-md-5">
                     <div class="detail-box">
                       <h2>
-                        Get Your Body
+                        Get in shape with us
                       </h2>
-                      <h1>
+                      <!-- <h1>
                         Fitness Here
-                      </h1>
+                      </h1> -->
                       <p>
                         Welcome to our premier personal training platform.
 Take your fitness journey to new heights with our flexible and accessible online training options, allowing you to train anytime, anywhere.
