--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <div class="col-lg-6 col-md-7 offset-md-6 offset-md-5">
                     <div class="detail-box">
                       <h2>
-                        Get in shape with us
+                        Start your fitness journey with us
                       </h2>
                       <!-- <h1>
                         Fitness Here
@@ -176,7 +176,7 @@ Take your fitness journey to new heights with our flexible and accessible online
                   <div class="col-lg-6 col-md-7 offset-md-6 offset-md-5">
                     <div class="detail-box">
                       <h2>
-                        Get in shape with us
+                        Get Your Body
                       </h2>
                       <!-- <h1>
                         Fitness Here
